# tvm

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  design.md  grammar.ebnf
.cargo/: config.toml
.github/workflows/: web.yml
bcgen/: Cargo.toml
bcgen/src/: decl.rs  gen.rs  main.rs  support.rs
benches/: README.md  bench.py  fib.hebi  fib.js  fib.lua  fib.rs  main.hebi  main.js  main.lua  main.rs  package.json  results.md
examples/: bench.rs  host.rs  test.rs
src/: asdf.rs  ast.rs  code.rs  error.rs  hir.rs  lex.rs  lib.rs  macros.rs  rc.rs  syn.rs  ty.rs  util.rs  value.rs  vm.rs  vm2.rs
src/ast/: macros.rs  make.rs  print.rs
src/code/: op.rs  op.x  print.rs  tests.rs
src/code/snapshots/: tvm__code__tests__arithmetic.snap  tvm__code__tests__assignment.snap  tvm__code__tests__basic_loop_0.snap  tvm__code__tests__basic_loop_1.snap  tvm__code__tests__basic_loop_break.snap  tvm__code__tests__basic_loop_continue.snap  tvm__code__tests__comparison.snap  tvm__code__tests__fibonacci.snap  tvm__code__tests__function_call_direct.snap  tvm__code__tests__function_call_indirect.snap  tvm__code__tests__functions.snap  tvm__code__tests__if_expr.snap  tvm__code__tests__if_expr_in_var.snap  tvm__code__tests__if_stmt.snap  tvm__code__tests__literals.snap  tvm__code__tests__unary_ops.snap  tvm__code__tests__variable.snap  tvm__code__tests__variable_copy.snap  tvm__code__tests__variable_move.snap  tvm__code__tests__variable_shadowing.snap  tvm__code__tests__variables.snap
src/syn/: tests.rs
src/ty/: macros.rs  print.rs  tests.rs
src/vm/: dyn_array.rs  macros.rs  operands.rs  tests.rs  value.rs
src/vm/value/: intern.rs  (+1 more)
src/vm2/: operands.rs  tests.rs  value.rs
vm/: Cargo.toml
vm/src/: dyn_array.rs  lib.rs  operands.rs  ops.rs  value.rs
vm/tests/: vm.rs
web/: Cargo.toml  index.css  index.html
web/src/: main.rs
xtask/src/: main.rs
(+95 files in other folders)
