[workspace]
members = ["xtask"]

[package]
name = "tvm"
version = "0.0.0"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
__debug = []

[dependencies]
beef = "0.5.2"
hashbrown = "0.15.0"
logos = "0.13.0"
paste = "1.0.13"
rustc-hash = "1.1.0"


[dev-dependencies]
indoc = "2.0.2"
insta = "1.30.0"
divan = "0.1.14"

[[bench]]
name = "main"
harness = false
