[package]
name = "bcgen"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
convert_case = { version = "0.6.0", default-features = false }
proc-macro2 = { version = "1.0.71", default-features = false }
quote = { version = "1.0.33", default-features = false }
